# Academy-co-scientist

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  _.pre-commit-config.yaml  pyproject.toml
abstracts/: 1-s2.0-S0167739X24004035-main.txt  2509.12384v2.txt  Agentic_Workflow_Design_Principles_for_Reliable_Science (4).txt  Argobots_A_Lightweight_Low-Level_Threading_and_Tasking_Framework.txt  ControlA_Agentic_Workflow_Control_Mechanisms_for_Reliable_Science.txt  Extending_the_Mochi_Methodology_to_Enable_Dynamic_HPC_Data_Services.txt  LLM_Safety_Concept_Paper_Saket_.txt  Performance_Characterization_and_Provenance_of_Distributed_Task-based_Workflows_on_HPC_Platforms.txt
academy_coscientist/: __init__.py  config.yaml  launcher.py
academy_coscientist/agents/: __init__.py  datatypes.py  evolution_agent.py  generation_agent.py  literature_agent.py  meta_agent.py  report_agent.py  research_vector_agent.py  review_agent.py  supervisor_agent.py  tournament_agent.py  vector_store_agent.py
academy_coscientist/utils/: __init__.py  config.py  embedding_cache.py  pdf_ingest.py  utils_llm.py  utils_logging.py  vector_store.py
logs_old/20251105-050716-5eed7e63/: actions.jsonl  llm_calls.jsonl
logs_old/20251105-061625-b9b817af/: actions.jsonl  llm_calls.jsonl
logs_old/20251105-064506-e88bb7a5/: actions.jsonl  llm_calls.jsonl
logs_old/20251105-065629-d59e7529/: actions.jsonl  llm_calls.jsonl
logs_old/20251105-182612-af96f73c/: actions.jsonl
logs_old/20251105-182925-a343d3ce/: actions.jsonl
logs_old/20251105-182952-994e4c23/: actions.jsonl  llm_calls.jsonl
logs_old/20251106-160603-f5d1dce2/: actions.jsonl  llm_calls.jsonl
logs_old/20251106-161435-56b2d754/: actions.jsonl  llm_calls.jsonl
logs_old/20251106-162116-34189a5c/: actions.jsonl  llm_calls.jsonl
logs_old/20251106-162527-3625f6d9/: actions.jsonl  llm_calls.jsonl
logs_old/20251106-163147-2c092b7f/: actions.jsonl  llm_calls.jsonl
logs_old/20251106-163735-d2f0cd49/: actions.jsonl  llm_calls.jsonl
logs_old/20251106-164205-66a2f9d2/: actions.jsonl  llm_calls.jsonl
logs_old/20251106-164338-ce5c42cd/: actions.jsonl  llm_calls.jsonl
logs_old/20251106-170302-2e534f3b/: actions.jsonl  llm_calls.jsonl
logs_old/20251106-172109-d454a4d4/: actions.jsonl  llm_calls.jsonl
logs_old/20251106-175010-2e353bc6/: actions.jsonl  llm_calls.jsonl
logs_old/20251106-180501-bf844643/: actions.jsonl  llm_calls.jsonl
logs_old/20251106-181626-1fa39fe7/: actions.jsonl  llm_calls.jsonl
logs_old/20251106-182513-9487bb15/: actions.jsonl  llm_calls.jsonl
logs_old/20251106-182842-24231e08/: actions.jsonl  llm_calls.jsonl
logs_old/20251106-184633-42e691db/: actions.jsonl  llm_calls.jsonl
logs_old/20251106-202309-df7d69d0/: actions.jsonl  llm_calls.jsonl
logs_old/20251106-203921-5faa3611/: actions.jsonl  llm_calls.jsonl
logs_old/20251106-205019-0d74bfd8/: actions.jsonl  llm_calls.jsonl
logs_old/20251106-210227-dfc4722e/: actions.jsonl
(+303 files in other folders)
